[package]
name = "io-uring"
version = "0.5.0-alpha"
authors = ["quininer <quininer@live.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/tokio-rs/io-uring"
homepage = "https://github.com/tokio-rs/io-uring"
documentation = "https://docs.rs/io-uring"
description = "The `io_uring` library for Rust."
categories = [ "asynchronous", "network-programming", "filesystem" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
exclude = [ "loom-ringbuf", "ocalls" ]
members = [ "io-uring-test" ]

[features]
default = [ "libc" ]
concurrent = [ "parking_lot" ]
unstable = []
overwrite = [ "bindgen" ]
direct-syscall = [ "sc" ]
sgx = [ "sgx_types", "sgx_tstd", "sgx_trts", "sgx_libc" ]

[dependencies]
libc = { version = "0.2", optional = true }
bitflags = "1"
parking_lot = { version = "0.11", optional = true }
sc = { version = "0.2", optional = true }
sgx_types = { path = "../incubator-teaclave-sgx-sdk/sgx_types", optional = true }
sgx_tstd = { path = "../incubator-teaclave-sgx-sdk/sgx_tstd", optional = true, features = ["backtrace"] }
sgx_trts = { path = "../incubator-teaclave-sgx-sdk/sgx_trts", optional = true }
sgx_libc = { path = "../incubator-teaclave-sgx-sdk/sgx_libc", optional = true }
[build-dependencies]
bindgen = { version = "0.56", optional = true }

[dev-dependencies]
tempfile = "3"
anyhow = "1"
nix = "0.19"
lazy_static = "1"
socket2 = "0.3"
criterion = "0.3"
slab = "0.4"

[package.metadata.docs.rs]
features = [ "concurrent", "unstable" ]

[[bench]]
name = "nop"
harness = false

[[bench]]
name = "iovec"
harness = false
