[package]
name = "Helloworldsampleenclave"
version = "1.0.0"

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
io-uring = { path = "../../../../io-uring", default-features = false, features = ["sgx"] }
slab = { git = "https://github.com/tokio-rs/slab.git", default-features = false }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path = "../../../../incubator-teaclave-sgx-sdk/sgx_types" }
sgx_tstd = { path = "../../../../incubator-teaclave-sgx-sdk/sgx_tstd", features = ["backtrace", "thread"] }
sgx_trts = { path = "../../../../incubator-teaclave-sgx-sdk/sgx_trts" }

[workspace]